changed Cmakelists to create a library

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,4 +2,4 @@ cmake_minimum_required (VERSION 3.0)
 project (lib)
 
 
-add_executable(lib main.cpp absoluteError.cpp doublePrecision.cpp HelloWorld.cpp relativeError.cpp singlePrecision.cpp)
+add_library(lib absoluteError.cpp doublePrecision.cpp HelloWorld.cpp relativeError.cpp singlePrecision.cpp)
