relative dll path not working, temporarily use absolute path

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,9 @@
-cmake_minimum_required (VERSION 3.0)
-project (lib)
+cmake_minimum_required(VERSION 3.15)
+project(math4610)
 
+set(CMAKE_CXX_STANDARD 14)
 
-add_library(lib absoluteError.cpp doublePrecision.cpp HelloWorld.cpp relativeError.cpp singlePrecision.cpp)
+add_library(math4610 SHARED library.cpp library.hpp)
+set_target_properties(math4610 PROPERTIES LINKER_LANGUAGE CXX)
+add_executable(math4610run main.cpp)
+target_link_libraries(math4610run C:\\Users\\Kaden\\Homework\\Math4610\\gftbs.github.io\\src\\cmake-build-debug\\libmath4610.dll)
