--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,4 +6,4 @@ set(CMAKE_CXX_STANDARD 14)
 add_library(math4610 SHARED library.cpp library.hpp)
 set_target_properties(math4610 PROPERTIES LINKER_LANGUAGE CXX)
 add_executable(math4610run main.cpp)
-target_link_libraries(math4610run C:\\Users\\Kaden\\Homework\\Math4610\\gftbs.github.io\\src\\cmake-build-debug\\libmath4610.dll)
+target_link_libraries(math4610run ${CMAKE_CURRENT_SOURCE_DIR}/cmake-build-debug/libmath4610.dll)
